# QtIndustrialUIDemo

./: CMakeLists.txt  Main.qml  README.md  learn.md  main.cpp
